--- a/css/style.css
+++ b/css/style.css
@@ -39,4 +39,32 @@ p{
 
 .logo{
 	font-size: 0.875em
+	margin-bottom: 7.5em;
+}
+
+
+#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; margin: 7.5em 0  }
+#mc_embed_signup form,
+#mc_embed_signup .indicates-required,
+#mc_embed_signup .mc-field-group{
+	margin: 0;padding:0;
+}
+#mc_embed_signup .mc-field-group{
+	width: 100%;
+}
+#mc_embed_signup .mc-field-group {padding-bottom:1.5em}
+#mc_embed_signup input{font-size:1em; }
+
+.wrap {
+	max-width: 38em;
+	padding: 0 1em;
+}
+
+@media (max-width: 600px) {
+	body{
+		font-size:1em;
+	}
+	#mc_embed_signup{
+		margin: 4.5em 0;
+	}
 }
