--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-		<title>{{ post.title }}</title>
+		<title>{{ page.title }}</title>
 
 		<meta name="description" content="{{ post.excerpt | remove: '<p>' | remove: '</p>' }}">
 		
