--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,32 @@ p{
 }
 
 
+.posts{
+	list-style: none;
+	margin: 4.5em 0 0 0;
+	padding: 0;
+}
+
+.post{
+	margin: -1px 0 0 0;
+	border:1px solid #ccc;
+	border-right: none;
+	border-left: none;
+}
+
+.post h2{
+	line-height: 3em;
+	margin: 0;
+	padding: 0;
+	font-size: 1em;
+	font-weight: normal;
+}
+
+.post a{
+	text-decoration: none;
+}
+
+
 #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; margin: 7.5em 0  }
 #mc_embed_signup form,
 #mc_embed_signup .indicates-required,
