--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,8 @@
 		
 		<link href="//cdn-images.mailchimp.com/embedcode/classic-081711.css" rel="stylesheet" type="text/css">
 		<link href="/css/style.css" rel="stylesheet" type="text/css">
+		
+		{% include analyticsHead.html %}
 	</head>
 	<body>
 		<div class="wrap"> 
@@ -16,6 +18,10 @@
 			{{ content }}
 		
 			{% include mailchimp.html %}
+			
+			{% include footer.html %}
+			
+			{% include analyticsFooter.html %}
 		</div>
 	</body>
 </html>
