Fix broken link

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -26,7 +26,7 @@
 				<a class="next" href="{{page.next.url}}">{{page.next.title}}</a>
 			{% else %}
 				<h2>What to read next?</h2>
-				<p>There's a new post each Wednesday. If you can't wait, take a look at the previous posts on the <a href="opendatapro.com">homepage</a>.</p>
+				<p>There's a new post each Wednesday. If you can't wait, take a look at the previous posts on the <a href="/">homepage</a>.</p>
 			{% endif %}
 			
 			{% include footer.html %}
