--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,14 @@ p{
 	margin-bottom: 7.5em;
 }
 
+.footer{
+	margin: 10em 0;
+	font-size: 0.75em;
+}
+
+.footer a{
+	padding: 2em 0 0 0;
+}
 
 .posts{
 	list-style: none;
