--- a/css/style.css
+++ b/css/style.css
@@ -44,12 +44,12 @@ p{
 }
 
 .footer{
-	margin: 10em 0;
+	margin: 10em 0 0;
 	font-size: 0.75em;
 }
 
 .footer a{
-	padding: 2em 0 0 0;
+	padding: 0 1em 0 0;
 }
 
 .posts{
